--- a/vignettes/spathial_vignette.Rmd
+++ b/vignettes/spathial_vignette.Rmd
@@ -150,24 +150,16 @@ points(X_garbage[,1],X_garbage[,2], col="gray", pch=16)
 ```
 
 ## Step 4: principal path
-The function ```spathialWay``` computes the principal path algorithm and gives as output the principal path points. It takes as input the matrix ```X```, the labels ```X_labels```, the boundaries ```boundary_ids``` and the parameters ```NC``` and ```neighbors```. 
-```NC``` is the desired number of waypoints of the resulting principal path. For example, given ```NC=10``` the resulting principal path will be composed of 10 waypoints plus the starting and the ending points. 
+The function ```spathialWay``` computes the principal path algorithm and gives as output the principal path points. It takes as input the matrix ```X```, the labels ```X_labels```, the boundaries ```boundary_ids``` and the parameter ```NC```. ```NC``` is the desired number of waypoints of the resulting principal path. For example, given ```NC=10``` the resulting principal path will be composed of 10 waypoints plus the starting and the ending points. 
 
-For the sake of simplicity, in this section we discuss only the simple version with ```neighbors=0```, which is the default value. We discuss more complex examples in the next section.
-
-The output of the function ```spathialWay``` is a list with the following content:
-
-* __ppath__: the waypoints of the principal path;   
-* __perturbed_paths__: the waypoints of all the perturbed paths.
-
-With ```neighbors=0``` the value of the output ```perturbed_path``` will be always equal to ```NULL```.
+The output of the function ```spathialWay``` is the variable ```spathial_res``` , which contains the coordinates of the waypoints of the principal path;   
 
 The following code chuncks show how to use the function ```spathialWay```, with or without prefiltering, and how to extract the output:
 
 ```{r results='hide'}
 # Compute principal path without prefiltering
 NC <- 50
-spathial_res_without_filtering <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 0)
+spathial_res_without_filtering <- spathial::spathialWay(X, X_labels, boundary_ids, NC)
 ```
 
 ```{r results='hide'}
@@ -175,10 +167,10 @@ spathial_res_without_filtering <- spathial::spathialWay(X, X_labels, boundary_id
 X_filtered <- X[mask,]
 X_labels_filtered <- X_labels[mask]
 NC <- 50
-spathial_res_with_filtering <- spathial::spathialWay(X_filtered, X_labels_filtered, boundary_ids, NC, neighbors = 0)
+spathial_res_with_filtering <- spathial::spathialWay(X_filtered, X_labels_filtered, boundary_ids, NC)
 ```
 
-The next subsection shows how to extract results from the ```spathial_res``` object.
+The next subsection shows how to extract results from the output ```spathial_res```.
 
 ## Step 5: understanding the results
 The package _spathial_ includes three different functions to understand the output of the principal path algorithm: ```spathialPlot```, ```spathialLables``` and ```spathialStatistics```. The following subsections describe what they do and how to use each of them.
@@ -241,9 +233,8 @@ In particular, here we want to focus on how much each feature (a coordinate of t
 
 For this reason, the output of the function ```spathialStatistics``` is a list with the following content, associating the features with a specific score associating it with path progression.
 
-* __correlations__: This vector contains the Pearson's correlation coefficients between each feature and the path. In the case of multiple paths (see the _neighbor_ parameter, described later in this vignette), a Fisher-integrated correlation coefficient is provided.
+* __correlations__: This vector contains the Pearson's correlation coefficients between each feature and the path.
 * __rank_scores__: This vector contains the ranks of associations between the n features and the path (1 being the most positively correlated, and n the most negatively correlated).
-In the case of multiple paths (see the _neighbor_ parameter, described later in this vignette), an average of the feature correlation coefficient ranks across the perturbed paths is provided.
 
 The following code chunks show how to use the function ```spathialStatistics``` and to extract the correlation-based association between features and the path.
 
@@ -294,7 +285,7 @@ X_labels <- boundary_init$X_labels
 
 # Compute spathial
 NC <- 50
-spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC, neighbors = 0)
+spathial_res <- spathial::spathialWay(X, X_labels, boundary_ids, NC)
 ```
 In order to visualize the multi-dimensional dataset on two dimensions, we perform a TSNE analysis on it [2].
 
@@ -332,63 +323,6 @@ top_positive_correlations
 top_negative_correlations<-sort(singlepath_correlations,decreasing=FALSE)[1:10]
 top_negative_correlations
 ```
-
-# Running multiple paths
-When working with high dimensional data, one of the problems that could occur is the overfitting. This means that the principal path algorithm could find a lot of different features all correlated with the evolution from the starting point to the ending one. 
-If you are interested in finding a restricted group of features which are very correlated with the _spathial_ path progression across a dataset, we suggest to use a more complex version of the function ```spathialWay```. It takes as input the parameter ```neighbors > 0``` and perform a refined version of the principal path algorithm.
-
-The following picture graphically explains how this version of the function ```spathialWay``` works when ```neighbors = 2```:
-
-![_Graphical represemtatopm of the perturbed path_](figures/simple_multipath_example.png){width=50%}
-
-It selects the ```neighbors``` nearest data points to the starting and the ending points and computes the principal path algorithm for each combination. This refined procedure allows to compute ```neighbors*neighbors``` paths: one of them is the normal principal path and the others can be considered as perturbation of the first one.
-
-The correlation can now be computed as mean of the Fisher's correlations of each path. Additionally, in the example we provide an average of the feature correlation coefficient ranks across the perturbed paths (```rank_scores```) as extra values to measure feature/path correlation strength.
-
-The following code box shows an example of the ```spathialWay``` function with ```neighbors = 1``` and the same dataset of the previous example. We will load again the RPM-normalized Liver Cancer expression data:
-```{r results="hide",message="hide"}
-#### Load input data
-myfile<-system.file("extdata", "liver_tcga_example1.csv", package = "spathial")
-data<-read.csv(myfile,as.is=TRUE,header=TRUE,row.names=1)
-X <- data[,1:(ncol(data)-1)]
-X_labels <- data[,"Category"]
-head(X)
-```
-Then, as before, we will select the starting and ending points and run _spathial_ to identify multiple paths between them. This example will take a few seconds, depending on the computer.
-```{r results="hide",message="hide"}
-#### Choose the starting and the ending points
-boundary_init <- spathialBoundaryIds(X, X_labels, mode=2, from=2, to=1)
-boundary_ids <- boundary_init$boundary_ids
-X <- boundary_init$X
-X_labels <- boundary_init$X_labels
-
-# Compute spathial
-NC <- 50
-spathial_res <- spathialWay(X, X_labels, boundary_ids, NC, neighbors = 1)
-```
-
-```{r fig.cap="_Rtsne representation of the Liver Cancer dataset with multiple perturbed paths (depicted as lines of different colors)_"}
-# Plot the path in 2D using Rtsne
-spathialPlot(X, X_labels, boundary_ids, spathial_res, perplexity_value=30,
-             xlab="TSNE1",ylab="TSNE2")
-```
-
-```{r}
-#### Correlation along the path
-statistics<-spathialStatistics(spathial_res)
-```
-
-We can compare the gene scores obtained with the multiple path approach with those obtained by the single path calculations, stored in ```singlepath_correlations```
-```{r fig.cap="_Comparison between feature correlation values in Single Path and Multiple Path_"}
-# Compare the results
-multipath_correlations<-statistics$correlations
-plot(singlepath_correlations,multipath_correlations,pch=20,
-     xlab="Gene Correlation Coefficients with Single Path",
-     ylab="Gene Correlation Coefficients with Multiple Path"
-)
-grid()
-```
-__Warning__: the greater is the value of the parameter ```neighbors > 5```, the slower is the algorithm. Our recommendation is to use ```neighbors <= 5```. 
 
 # References
 
